--- a/includes/footer.html
+++ b/includes/footer.html
@@ -17,14 +17,14 @@
         <h4>Resources</h4>
         <ul>
             <li><a href="/blog/">Industry Blog</a></li>
-            <li><a href="https://support.joe.coffee" target="_blank">Support & FAQs</a></li>
+            <li><a href="https://support.joe.coffee" target="_blank">Support &amp; FAQs</a></li>
             <li><a href="https://manage.joe.coffee/login" target="_blank">Owner Login</a></li>
         </ul>
     </div>
     <div class="footer-column">
         <h4>Company</h4>
         <ul>
-            <li><a href="/for-coffee-shops/#about">Mission & Values</a></li>
+            <li><a href="/for-coffee-shops/#about">Mission &amp; Values</a></li>
             <li><a href="/terms/">Terms and Conditions</a></li>
             <li><a href="/privacy/">Privacy Policy</a></li>
             <li><a href="/merchant-terms/">Merchant Terms of Service</a></li>
@@ -49,9 +49,9 @@
         <a href="/locations/wa/everett/">Everett</a>
         <a href="/locations/wa/centralia/">Centralia</a>
     </div>
-    <a href="/locations/" class="footer-view-all">View All Locations →</a>
+    <a href="/locations/" class="footer-view-all">View All Locations &rarr;</a>
 </div>
 
 <div class="footer-bottom">
-    © 2025 joe Coffee. All rights reserved. | Crafted with ❤️ for indie coffee
+    &copy; 2025 joe Coffee. All rights reserved. | Crafted with &#10084;&#65039; for indie coffee
 </div>
