--- a/blog/index.njk
+++ b/blog/index.njk
@@ -1,3 +1,4 @@
+brendenmartin@Brendens-MacBook-Pro joe-marketing-site % cat ~/Desktop/joe-marketing-site/blog/index.njk 
 ---
 layout: base.njk
 title: Blog
