--- a/_includes/footer.njk
+++ b/_includes/footer.njk
@@ -164,8 +164,8 @@
             <ul>
                 <li><a href="https://apps.apple.com/us/app/joe-coffee-order-ahead/id1437558382">Download App</a></li>
                 <li><a href="/locations/">Find Shops</a></li>
-                <li><a href="/rewards/">Rewards</a>Rewards</a></li>
-                <li><a href="/gift-cards/">Gift Cards</a>Gift Cards</a></li>
+                <li><a href="/rewards/">Rewards</a></li>
+                <li><a href="/gift-cards/">Gift Cards</a></li>
             </ul>
         </div>
         <div class="footer-column">
@@ -180,7 +180,7 @@
         <div class="footer-column">
             <h4>Company</h4>
             <ul>
-                <li><a href="/about/">About</a>About</a></li>
+                <li><a href="/about/">About</a></li>
                 <li><a href="/blog/">Blog</a></li>
                 <li><a href="/privacy/">Privacy</a></li>
                 <li><a href="/terms/">Terms</a></li>
