--- a/_includes/footer.njk
+++ b/_includes/footer.njk
@@ -162,7 +162,7 @@
         <div class="footer-column">
             <h4>For Coffee Lovers</h4>
             <ul>
-                <li><a href="https://apps.apple.com/us/app/joe-coffee-order-ahead/id1437558382">Download App</a></li>
+                <li><a href="https://get.joe.coffee">Download App</a></li>
                 <li><a href="/locations/">Find Shops</a></li>
                 <li><a href="/rewards/">Rewards</a></li>
                 <li><a href="/gift-cards/">Gift Cards</a></li>
