--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -9,6 +9,15 @@
   <meta property="og:title" content="{{ title }} | joe Coffee">
   <meta property="og:description" content="{{ description or excerpt or 'Stories from the joe community.' }}">
   <meta property="og:type" content="website">
+  <meta property="og:url" content="https://joe.coffee{{ page.url }}">
+  <meta property="og:image" content="{{ ogImage or 'https://joe.coffee/images/og-default.png' }}">
+  
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="{{ title }} | joe Coffee">
+  <meta name="twitter:description" content="{{ description or excerpt or 'Stories from the joe community.' }}">
+  <meta name="twitter:image" content="{{ ogImage or 'https://joe.coffee/images/og-default.png' }}">
+  
+  <link rel="canonical" href="https://joe.coffee{{ page.url }}">
   
   <link rel="icon" type="image/png" href="https://4591743.fs1.hubspotusercontent-na1.net/hubfs/4591743/Black.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -328,5 +337,4 @@
   </script>
 
 </body>
-
 </html>
