--- a/rewards.njk
+++ b/rewards.njk
@@ -788,7 +788,7 @@ description: "AI-powered loyalty that delivers 41x ROI. Personalized offers, pro
               <td>True cost</td>
               <td class="check-no">8-12% of revenue</td>
               <td class="check-partial">$45-105/mo + discounts</td>
-              <td class="check-yes">~1% effective</td>
+              <td class="check-yes">~2.5%</td>
             </tr>
             <tr>
               <td>Network rewards</td>
