--- a/sitemap-static.njk
+++ b/sitemap-static.njk
@@ -1,5 +1,5 @@
 ---
-permalink: /sitemap.xml
+permalink: /sitemap-static.xml
 eleventyExcludeFromCollections: true
 ---
 <?xml version="1.0" encoding="UTF-8"?>
