Add universal tracking to all pages

--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -338,9 +338,7 @@
       });
     }
   </script>
-  <script src="/js/track.js"></script>
+  <script src="/includes/tracking.js"></script>
 
-</body>
-</html>
 </body>
 </html>
