Add PCI DSS 12.9.1 and 12.9.2 compliance language to merchant terms

--- a/merchant-terms.njk
+++ b/merchant-terms.njk
@@ -7,7 +7,7 @@ permalink: /merchant-terms/
 <section class="pt-28 pb-16">
   <div class="max-w-4xl mx-auto px-6">
     <h1 class="text-4xl font-bold text-black mb-4">Merchant Terms and Conditions of Use</h1>
-    <p class="text-gray-500 mb-8">Last modified on 09/09/2024</p>
+    <p class="text-gray-500 mb-8">Last modified on 01/14/2026</p>
     
     <div class="prose max-w-none">
       <p>This Merchant Terms and Conditions of Use (the "Agreement" or "Terms") is a legal agreement between you ("Merchant" or "You" or "Your") and Coffey Ventures, Inc., a Delaware corporation, DBA Joe Coffee (the "Company"). This Agreement contains the terms and conditions that govern Your access to and use of all product lines including (the "Apps"), but not limited to, the website, merchant application, mobile application, point-of-sale, and kiosk of the Company. By downloading, subscribing to, or in any way accessing the Apps, You agree to follow and abide by these Terms, and You agree that You are responsible for compliance with all applicable laws and regulations. If You do not agree with any of the Terms herein, You must forego using or accessing the Apps.</p>
@@ -28,6 +28,12 @@ permalink: /merchant-terms/
       <p>Features of the Apps enable payments, including those from Merchants and consumers, which rely on accurate bank account, credit card, and information provided by parties to the transaction. We collect data necessary to process your payment, such as your payment instrument number (such as a credit card number) and the security code associated with your payment instrument. All payment data is stored by a secure third-party payment gateway. We do not store your payment information, and we only share that information with our secure third-party payment gateway in order to process the payments or refunds required for your account. The Company cannot guarantee the accuracy of payment information, which is the responsibility of the parties, and cannot be responsible for delay or interruption of payments due to inaccurate information. When You provide payment information, You consent to transactions initiated by You and enabled by the Apps. Payment features are enabled through our secured third-party payment gateway, Stripe, which may request additional payment information from time to time to enable certain features of the Apps, which features may become unavailable if You do not provide such additional information.</p>
 
       <p>Because orders, payments, refunds, and rewards incorporate Stripe services, by using the Apps, You also agree to be bound by Stripe's Terms and Conditions and Privacy Policies, available at: <a href="https://stripe.com/us/connect-account/legal" target="_blank">https://stripe.com/us/connect-account/legal</a>.</p>
+
+      <h3>Service Provider Responsibility (PCI DSS 12.9.1)</h3>
+      <p>To the extent Joe Coffee possesses, stores, processes, or transmits account data on behalf of Merchant, or to the extent Joe Coffee's services could impact the security of Merchant cardholder data and/or sensitive authentication data, Joe Coffee is responsible for maintaining appropriate security controls for such data and services.</p>
+
+      <h3>PCI Compliance Information Requests (PCI DSS 12.9.2)</h3>
+      <p>Upon Merchant's written request, Joe Coffee will provide information reasonably necessary to support Merchant compliance activities, including (i) Joe Coffee's PCI DSS compliance status information and (ii) information describing which PCI DSS responsibilities are managed by Joe Coffee, which are managed by Merchant, and which are shared, as applicable to the services provided.</p>
 
       <h2>4. Payments by Merchant</h2>
       <p>The Company provides payment processing services to Merchants through Stripe, Inc. ("Stripe"). The standard rates for payment processing are 2.6% + $0.10 per transaction for in-person payments and 2.9% + $0.30 per transaction for online and app-based payments.</p>
