--- a/includes/footer.html
+++ b/includes/footer.html
@@ -25,6 +25,8 @@
         <h4>Company</h4>
         <ul>
             <li><a href="/for-coffee-shops/#about">Mission &amp; Values</a></li>
+            <li><a href="/media/">Media</a></li>
+            <li><a href="/contact/">Contact</a></li>
             <li><a href="/terms/">Terms and Conditions</a></li>
             <li><a href="/privacy/">Privacy Policy</a></li>
             <li><a href="/merchant-terms/">Merchant Terms of Service</a></li>
