--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,10 +1,12 @@
-<!-- Main Footer Content -->
 <div class="footer-content">
     <div class="footer-brand">
-        <img src="/images/logo.png" alt="joe">
+        <a href="/" class="footer-logo">
+            <img src="/images/logo.png" alt="joe">
+        </a>
         <p>The #1 app for indie coffee lovers. Skip the line, earn rewards, support local.</p>
     </div>
-    <div class="footer-column">
+    
+    <div class="footer-col">
         <h4>For Shops</h4>
         <ul>
             <li><a href="/for-coffee-shops/#platform">Platform</a></li>
@@ -13,18 +15,20 @@
             <li><a href="/for-coffee-shops/#join">Join the Movement</a></li>
         </ul>
     </div>
-    <div class="footer-column">
+    
+    <div class="footer-col">
         <h4>Resources</h4>
         <ul>
             <li><a href="/blog/">Industry Blog</a></li>
-            <li><a href="https://support.joe.coffee" target="_blank">Support &amp; FAQs</a></li>
-            <li><a href="https://manage.joe.coffee/login" target="_blank">Owner Login</a></li>
+            <li><a href="https://support.joe.coffee">Support & FAQs</a></li>
+            <li><a href="https://manage.joe.coffee/login">Owner Login</a></li>
         </ul>
     </div>
-    <div class="footer-column">
+    
+    <div class="footer-col">
         <h4>Company</h4>
         <ul>
-            <li><a href="/for-coffee-shops/#about">Mission &amp; Values</a></li>
+            <li><a href="/about/">About</a></li>
             <li><a href="/media/">Media</a></li>
             <li><a href="/contact/">Contact</a></li>
             <li><a href="/terms/">Terms and Conditions</a></li>
@@ -34,26 +38,26 @@
     </div>
 </div>
 
-<!-- Coffee Shops by City Section -->
-<div class="footer-cities-section">
+<div class="footer-cities">
     <h4>Coffee Shops by City</h4>
     <div class="footer-cities-grid">
-        <a href="/locations/wa/seattle/">Seattle</a>
-        <a href="/locations/wa/spokane/">Spokane</a>
-        <a href="/locations/il/chicago/">Chicago</a>
-        <a href="/locations/wa/tacoma/">Tacoma</a>
-        <a href="/locations/or/portland/">Portland</a>
+        <a href="/locations/ny/new-york/">New York</a>
         <a href="/locations/ca/los-angeles/">Los Angeles</a>
-        <a href="/locations/wa/puyallup/">Puyallup</a>
-        <a href="/locations/tx/san-antonio/">San Antonio</a>
-        <a href="/locations/wa/spokane-valley/">Spokane Valley</a>
-        <a href="/locations/id/coeur-dalene/">Coeur d'Alene</a>
-        <a href="/locations/wa/everett/">Everett</a>
-        <a href="/locations/wa/centralia/">Centralia</a>
+        <a href="/locations/il/chicago/">Chicago</a>
+        <a href="/locations/ca/san-francisco/">San Francisco</a>
+        <a href="/locations/pa/philadelphia/">Philadelphia</a>
+        <a href="/locations/ca/san-diego/">San Diego</a>
+        <a href="/locations/ma/boston/">Boston</a>
+        <a href="/locations/wa/seattle/">Seattle</a>
+        <a href="/locations/co/denver/">Denver</a>
+        <a href="/locations/dc/washington/">Washington DC</a>
+        <a href="/locations/tn/nashville/">Nashville</a>
+        <a href="/locations/or/portland/">Portland</a>
     </div>
-    <a href="/locations/" class="footer-view-all">View All Locations &rarr;</a>
+    <a href="/locations/" class="view-all">View All Locations →</a>
 </div>
 
 <div class="footer-bottom">
-    &copy; 2025 joe Coffee. All rights reserved. | Crafted with &#10084;&#65039; for indie coffee
+    <span>© 2025 joe Coffee. All rights reserved.</span>
+    <span>Crafted with ❤️ for indie coffee</span>
 </div>
