fix base.njk mobile nav - hide CTA, smaller logo

--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -217,7 +217,7 @@
   <nav class="fixed top-0 left-0 right-0 z-50 bg-white border-b border-gray-100 nav-blur" style="background-color: rgba(255,255,255,0.95);">
     <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
       <a href="/" class="flex items-center">
-        <img src="https://4591743.fs1.hubspotusercontent-na1.net/hubfs/4591743/Black.png" alt="joe" class="h-14">
+        <img src="https://4591743.fs1.hubspotusercontent-na1.net/hubfs/4591743/Black.png" alt="joe" class="h-10 md:h-14">
       </a>
       
       <!-- Desktop Navigation -->
@@ -253,7 +253,7 @@
       </div>
       
       <!-- Desktop CTA -->
-      <a href="/for-coffee-shops/#join" class="desktop-cta bg-black text-white px-5 py-2 rounded-full text-sm font-semibold hover:bg-gray-800">
+      <a href="/for-coffee-shops/#join" class="desktop-cta hidden md:block bg-black text-white px-5 py-2 rounded-full text-sm font-semibold hover:bg-gray-800">
         Join Now
       </a>
       
